# PythonGraph

./: Animal.py  Datetime.py  Graph.py  Poule.py  Project.toml  README.md  math_module.py  pyproject.toml  test_math_module.py
.github/workflows/: python-tests.yml
Graph.py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Projet/: cours.py  game.py
