[project]
name = "Graph.py"
requires-python = ">= 3.11.5"
readme = "README.md"


dependencies = ["matplotlib"]
dependencies = ["numpy"]


authors = [
  {name = "Alexandre Meunier", email = "alexandre.meunier1506@gmail.com"},
]
maintainers = [
  {name = "Alexandre Meunier", email = "alexandre.meunier1506@gmail.com"}
]