[project]
version = "2020.0.0"
dependencies = [
  "matplotlib >= 3.10.0",
  "numpy >= 2.2.2",
]
name = "Graph.py"
requires-python = ">= 3.11.5"
readme = "README.md"
authors = [
  {name = "Alexandre Meunier", email = "alexandre.meunier1506@gmail.com"},
]
maintainers = [
  {name = "Alexandre Meunier", email = "alexandre.meunier1506@gmail.com"}
]
[project.optional-dependencies]
test = ['pytest', 'ruff']
